@@ -19,6 +19,7 @@ package com.hedera.mirror.test.e2e.acceptance.steps;
 import static com.hedera.hashgraph.sdk.Status.CURRENT_TREASURY_STILL_OWNS_NFTS;
 import static com.hedera.mirror.rest.model.TransactionTypes.CRYPTOTRANSFER;
 import static com.hedera.mirror.test.e2e.acceptance.util.TestUtil.nextBytes;
+import static java.util.Collections.emptyList;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -28,6 +29,8 @@ import com.hedera.hashgraph.sdk.AccountId;
 import com.hedera.hashgraph.sdk.CustomFee;
 import com.hedera.hashgraph.sdk.CustomFixedFee;
 import com.hedera.hashgraph.sdk.CustomFractionalFee;
+import com.hedera.hashgraph.sdk.PrivateKey;
+import com.hedera.hashgraph.sdk.PublicKey;
 import com.hedera.hashgraph.sdk.ReceiptStatusException;
 import com.hedera.hashgraph.sdk.TokenId;
 import com.hedera.hashgraph.sdk.TokenType;
@@ -60,16 +63,20 @@ import com.hedera.mirror.test.e2e.acceptance.client.AccountClient.AccountNameEnu
 import com.hedera.mirror.test.e2e.acceptance.client.MirrorNodeClient;
 import com.hedera.mirror.test.e2e.acceptance.client.TokenClient;
 import com.hedera.mirror.test.e2e.acceptance.client.TokenClient.TokenNameEnum;
+import com.hedera.mirror.test.e2e.acceptance.client.TokenClient.TokenResponse;
 import com.hedera.mirror.test.e2e.acceptance.props.ExpandedAccountId;
 import io.cucumber.java.en.Given;
 import io.cucumber.java.en.Then;
 import io.cucumber.java.en.When;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import lombok.Builder;
 import lombok.CustomLog;
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
 import org.assertj.core.api.recursive.comparison.RecursiveComparisonConfiguration;
 import org.springframework.http.HttpStatus;
@@ -79,21 +86,18 @@ import org.springframework.util.CollectionUtils;
 @RequiredArgsConstructor
 public class TokenFeature extends AbstractFeature {
 
-    private static final int INITIAL_SUPPLY = 1_000_000;
-    private static final int MAX_SUPPLY = 1;
-
     private final TokenClient tokenClient;
     private final AccountClient accountClient;
     private final MirrorNodeClient mirrorClient;
 
-    private final Map<TokenId, List<Long>> tokenSerialNumbers = new HashMap<>();
+    private final Map<TokenId, List<NftInfo>> tokenNftInfoMap = new HashMap<>();
 
     private List<CustomFee> customFees = List.of();
+
+    @Getter
     private TokenId tokenId;
 
-    public TokenId getTokenId() {
-        return tokenId;
-    }
+    private TokenResponse tokenResponse;
 
     @Given("I ensure token {token} has been created")
     public void createNamedToken(TokenNameEnum tokenName) {
@@ -111,14 +115,14 @@ public class TokenFeature extends AbstractFeature {
         final var result = tokenClient.getToken(tokenName);
         this.networkTransactionResponse = result.response();
         this.tokenId = result.tokenId();
-        tokenSerialNumbers.put(tokenId, new ArrayList<>());
+        tokenNftInfoMap.put(tokenId, new ArrayList<>());
     }
 
     @Given("I ensure token has the correct properties")
     public void ensureTokenProperties() {
         var tokensResponse = mirrorClient.getTokens(tokenId.toString()).getTokens();
         assertThat(tokensResponse).isNotNull().hasSize(1);
-        var token = tokensResponse.get(0);
+        var token = tokensResponse.getFirst();
         var tokenDecimals = token.getDecimals();
         if (token.getType().equals(TokenType.NON_FUNGIBLE_UNIQUE.toString())) {
             assertThat(tokenDecimals).isZero();
@@ -130,9 +134,22 @@ public class TokenFeature extends AbstractFeature {
 
         var balancesResponse = mirrorClient.getTokenBalances(tokenId.toString()).getBalances();
         assertThat(balancesResponse).isNotNull().hasSize(1);
-        var balanceDecimals = balancesResponse.get(0).getDecimals();
+        var balanceDecimals = balancesResponse.getFirst().getDecimals();
         assertThat(balanceDecimals).isEqualTo(tokenDecimals);
         log.debug("Get token balances for token {}: {}", tokenId, balancesResponse);
+    }
+
+    @Given("I ensure token has the expected metadata and key")
+    public void ensureTokenInfoProperties() {
+        var tokenInfo = mirrorClient.getTokenInfo(tokenId.toString());
+        var tokenInfoMetadataKey = tokenInfo.getMetadataKey() != null
+                ? PublicKey.fromString(tokenInfo.getMetadataKey().getKey())
+                : null;
+        var responseMetadataKey = this.tokenResponse.metadataKey() != null
+                ? this.tokenResponse.metadataKey().getPublicKey()
+                : null;
+        assertThat(tokenInfoMetadataKey).isEqualTo(responseMetadataKey);
+        assertThat(tokenInfo.getMetadata()).isEqualTo(this.tokenResponse.metadata());
     }
 
     @Given("I associate account {account} with token {token}")
@@ -294,25 +311,25 @@ public class TokenFeature extends AbstractFeature {
 
     @Given("I successfully create a new token with custom fees schedule")
     public void createNewToken(List<CustomFee> customFees) {
-        final var result = tokenClient.getToken(TokenNameEnum.FUNGIBLE_WITH_CUSTOM_FEES, customFees);
-        this.tokenId = result.tokenId();
-        this.networkTransactionResponse = result.response();
+        this.tokenResponse = tokenClient.getToken(TokenNameEnum.FUNGIBLE_WITH_CUSTOM_FEES, customFees);
+        this.tokenId = tokenResponse.tokenId();
+        this.networkTransactionResponse = tokenResponse.response();
         this.customFees = customFees;
     }
 
     @Given("I successfully create a new unfrozen and granted kyc token")
     public void createNewToken() {
-        final var response = tokenClient.getToken(TokenNameEnum.FUNGIBLE_KYC_UNFROZEN_2);
-        this.tokenId = response.tokenId();
-        this.networkTransactionResponse = response.response();
+        this.tokenResponse = tokenClient.getToken(TokenNameEnum.FUNGIBLE_KYC_UNFROZEN_2);
+        this.tokenId = tokenResponse.tokenId();
+        this.networkTransactionResponse = tokenResponse.response();
     }
 
     @Given("I successfully create a new nft with infinite supplyType")
     public void createNewNft() {
-        final var result = tokenClient.getToken(TokenNameEnum.NFT_DELETABLE);
-        this.networkTransactionResponse = result.response();
-        this.tokenId = result.tokenId();
-        tokenSerialNumbers.put(tokenId, new ArrayList<>());
+        this.tokenResponse = tokenClient.getToken(TokenNameEnum.NFT_DELETABLE);
+        this.networkTransactionResponse = tokenResponse.response();
+        this.tokenId = tokenResponse.tokenId();
+        tokenNftInfoMap.put(tokenId, new ArrayList<>());
     }
 
     @Given("I associate {account} with token")
@@ -336,30 +353,24 @@ public class TokenFeature extends AbstractFeature {
         transferTokens(tokenId, amount, null, accountName);
     }
 
-    @Then("I transfer serial number {int} to {account}")
-    public void transferNftsToRecipient(int serialNumberIndex, AccountNameEnum accountName) {
-        ExpandedAccountId payer = tokenClient.getSdkClient().getExpandedOperatorAccountId();
-        transferNfts(
-                tokenId, tokenSerialNumbers.get(tokenId).get(getIndexOrDefault(serialNumberIndex)), payer, accountName);
+    @Then("I transfer serial number index {int} to {account}")
+    public void transferNftsToRecipient(int serialNumberIndex, AccountNameEnum recipient) {
+        var ownerAccountId = tokenClient.getSdkClient().getExpandedOperatorAccountId();
+        var serialNumbers =
+                List.of(tokenNftInfoMap.get(tokenId).get(serialNumberIndex).serialNumber());
+        var recipientAccountId = accountClient.getAccount(recipient).getAccountId();
+
+        transferNfts(this.tokenId, serialNumbers, ownerAccountId, recipientAccountId, false);
     }
 
     @Then("{account} transfers NFT {token} to {account}")
     public void transferNftsToRecipient(AccountNameEnum spender, TokenNameEnum token, AccountNameEnum recipient) {
-        var tokenId = tokenClient.getToken(token).tokenId();
+        var nftTokenId = tokenClient.getToken(token).tokenId();
+        var serialNumbers = getSerialsForToken(nftTokenId);
         var spenderAccountId = accountClient.getAccount(spender);
         var recipientAccountId = accountClient.getAccount(recipient).getAccountId();
-        var ownerAccountId = accountClient.getClient().getOperatorAccountId();
 
-        networkTransactionResponse = tokenClient.transferNonFungibleToken(
-                tokenId,
-                spenderAccountId,
-                recipientAccountId,
-                tokenSerialNumbers.get(tokenId),
-                spenderAccountId.getPrivateKey(),
-                ownerAccountId,
-                true);
-        assertThat(networkTransactionResponse.getTransactionId()).isNotNull();
-        assertThat(networkTransactionResponse.getReceipt()).isNotNull();
+        transferNfts(nftTokenId, serialNumbers, spenderAccountId, recipientAccountId, true);
     }
 
     @Then("{account} transfers {int} tokens to {account} with fractional fee {int}")
@@ -388,6 +399,26 @@ public class TokenFeature extends AbstractFeature {
         networkTransactionResponse = tokenClient.unpause(tokenId);
         assertNotNull(networkTransactionResponse.getTransactionId());
         assertNotNull(networkTransactionResponse.getReceipt());
+    }
+
+    @Given("I update the token metadata")
+    public void updateTokenMetadata() {
+        var newMetadata = nextBytes(4);
+        networkTransactionResponse = tokenClient.updateTokenMetadata(tokenId, tokenResponse.metadataKey(), newMetadata);
+        assertNotNull(networkTransactionResponse.getTransactionId());
+        assertNotNull(networkTransactionResponse.getReceipt());
+        this.tokenResponse =
+                this.tokenResponse.toBuilder().metadata(newMetadata).build();
+    }
+
+    @Given("I update the token metadata key")
+    public void updateTokenMetadataKey() {
+        var newMetadataKey = PrivateKey.generateED25519();
+        networkTransactionResponse = tokenClient.updateTokenMetadataKey(tokenId, newMetadataKey);
+        assertNotNull(networkTransactionResponse.getTransactionId());
+        assertNotNull(networkTransactionResponse.getReceipt());
+        this.tokenResponse =
+                this.tokenResponse.toBuilder().metadataKey(newMetadataKey).build();
     }
 
     @Given("I update the treasury of token to operator")
@@ -421,10 +452,10 @@ public class TokenFeature extends AbstractFeature {
         assertNotNull(networkTransactionResponse.getReceipt());
     }
 
-    @Given("I burn serial number {int} from token")
+    @Given("I burn serial number index {int} from token")
     public void burnNft(int serialNumberIndex) {
         networkTransactionResponse = tokenClient.burnNonFungible(
-                tokenId, tokenSerialNumbers.get(tokenId).get(serialNumberIndex));
+                tokenId, tokenNftInfoMap.get(tokenId).get(serialNumberIndex).serialNumber());
         assertNotNull(networkTransactionResponse.getTransactionId());
         assertNotNull(networkTransactionResponse.getReceipt());
     }
@@ -438,14 +469,25 @@ public class TokenFeature extends AbstractFeature {
 
     @Given("I mint a serial number from the token")
     public void mintNftToken() {
-        networkTransactionResponse = tokenClient.mint(tokenId, nextBytes(4));
-        assertThat(networkTransactionResponse.getTransactionId()).isNotNull();
+        var metadata = nextBytes(4);
+        networkTransactionResponse = tokenClient.mint(tokenId, metadata);
+        assertNotNull(networkTransactionResponse.getTransactionId());
         TransactionReceipt receipt = networkTransactionResponse.getReceipt();
-        assertThat(receipt).isNotNull();
+        assertNotNull(receipt);
         assertThat(receipt.serials.size()).isOne();
-        long serialNumber = receipt.serials.get(0);
+        long serialNumber = receipt.serials.getFirst();
         assertThat(serialNumber).isPositive();
-        tokenSerialNumbers.get(tokenId).add(serialNumber);
+        tokenNftInfoMap.get(tokenId).add(new NftInfo(serialNumber, metadata));
+    }
+
+    @Given("I update the metadata for serial number indices {int} and {int}")
+    public void updateNftMetadata(int serialNumberIndex1, int serialNumberIndex2) {
+        updateNftMetadataForSerials(serialNumberIndex1, serialNumberIndex2);
+    }
+
+    @Given("I update the metadata for serial number index {int}")
+    public void updateNftMetadata(int serialNumberIndex) {
+        updateNftMetadataForSerials(serialNumberIndex);
     }
 
     @Given("I wipe {int} from the token")
@@ -455,10 +497,10 @@ public class TokenFeature extends AbstractFeature {
         assertNotNull(networkTransactionResponse.getReceipt());
     }
 
-    @Given("I wipe serial number {int} from token")
+    @Given("I wipe serial number index {int} from token")
     public void wipeNft(int serialNumberIndex) {
         networkTransactionResponse = tokenClient.wipeNonFungible(
-                tokenId, tokenSerialNumbers.get(tokenId).get(serialNumberIndex), getRecipientAccountId());
+                tokenId, tokenNftInfoMap.get(tokenId).get(serialNumberIndex).serialNumber(), getRecipientAccountId());
         assertNotNull(networkTransactionResponse.getTransactionId());
         assertNotNull(networkTransactionResponse.getReceipt());
     }
@@ -502,8 +544,10 @@ public class TokenFeature extends AbstractFeature {
     @Then("the mirror node REST API should return the transaction for token serial number index {int} transaction flow")
     @RetryAsserts
     public void verifyMirrorNftTransactionsAPIResponses(Integer serialNumberIndex) {
-        Long serialNumber = tokenSerialNumbers.get(tokenId).get(getIndexOrDefault(serialNumberIndex));
+        var tokenNftInfo = tokenNftInfoMap.get(tokenId).get(getIndexOrDefault(serialNumberIndex));
+        var serialNumber = tokenNftInfo.serialNumber();
         verifyTransactions();
+        verifyNft(tokenId, serialNumber, tokenNftInfo.metadata());
         verifyNftTransactions(tokenId, serialNumber);
     }
 
@@ -525,13 +569,14 @@ public class TokenFeature extends AbstractFeature {
         verifyTokenTransfers(tokenId);
     }
 
-    @Then("the mirror node REST API should return the transaction for token serial number {int} full flow")
+    @Then("the mirror node REST API should return the transaction for token serial number index {int} full flow")
     @RetryAsserts
     public void verifyMirrorNftFundFlow(Integer serialNumberIndex) {
-        Long serialNumber = tokenSerialNumbers.get(tokenId).get(getIndexOrDefault(serialNumberIndex));
+        var tokenNftInfo = tokenNftInfoMap.get(tokenId).get(getIndexOrDefault(serialNumberIndex));
+        var serialNumber = tokenNftInfo.serialNumber();
         verifyTransactions();
         verifyToken(tokenId);
-        verifyNft(tokenId, serialNumber);
+        verifyNft(tokenId, serialNumber, tokenNftInfo.metadata());
         verifyNftTransfers(tokenId, serialNumber);
         verifyNftTransactions(tokenId, serialNumber);
     }
@@ -550,7 +595,7 @@ public class TokenFeature extends AbstractFeature {
         List<TransactionDetail> transactions = mirrorTransactionsResponse.getTransactions();
         assertNotNull(transactions);
         assertThat(transactions).isNotEmpty();
-        TransactionDetail mirrorTransaction = transactions.get(0);
+        TransactionDetail mirrorTransaction = transactions.getFirst();
         assertThat(mirrorTransaction.getTransactionId()).isEqualTo(transactionIdString);
 
         if (status == HttpStatus.OK.value()) {
@@ -571,7 +616,7 @@ public class TokenFeature extends AbstractFeature {
         TokenRelationshipResponse mirrorTokenRelationship = callTokenRelationship(tokenId);
         // Asserting values
         assertTokenRelationship(mirrorTokenRelationship);
-        TokenRelationship token = mirrorTokenRelationship.getTokens().get(0);
+        TokenRelationship token = mirrorTokenRelationship.getTokens().getFirst();
         assertThat(token.getTokenId()).isEqualTo(tokenId.toString());
         assertThat(token.getFreezeStatus()).isEqualTo(FreezeStatusEnum.UNFROZEN);
         assertThat(token.getKycStatus()).isEqualTo(KycStatusEnum.REVOKED);
@@ -584,7 +629,7 @@ public class TokenFeature extends AbstractFeature {
         TokenRelationshipResponse mirrorTokenRelationship = callTokenRelationship(tokenId);
         // Asserting values
         assertTokenRelationship(mirrorTokenRelationship);
-        TokenRelationship token = mirrorTokenRelationship.getTokens().get(0);
+        TokenRelationship token = mirrorTokenRelationship.getTokens().getFirst();
         assertThat(token.getTokenId()).isEqualTo(tokenId.toString());
         assertThat(token.getFreezeStatus()).isEqualTo(FreezeStatusEnum.NOT_APPLICABLE);
         assertThat(token.getKycStatus()).isEqualTo(KycStatusEnum.NOT_APPLICABLE);
@@ -611,7 +656,7 @@ public class TokenFeature extends AbstractFeature {
     @Then("the mirror node REST API should confirm the approved transfer of NFT and confirm the new owner is {account}")
     @RetryAsserts
     public void verifyMirrorNftTransfer(AccountClient.AccountNameEnum accountName) {
-        Long serialNumber = tokenSerialNumbers.get(tokenId).get(0);
+        Long serialNumber = tokenNftInfoMap.get(tokenId).getFirst().serialNumber();
         var recipientId = accountClient.getAccount(accountName);
         verifyTransactions();
         verifyNftTransfers(tokenId, serialNumber, recipientId);
@@ -679,19 +724,30 @@ public class TokenFeature extends AbstractFeature {
         var tokenRelationships =
                 mirrorClient.getTokenRelationships(accountId, tokenId).getTokens();
         assertThat(tokenRelationships).isNotNull().hasSize(1);
-        return tokenRelationships.get(0).getBalance();
+        return tokenRelationships.getFirst().getBalance();
     }
 
     private void transferNfts(
-            TokenId tokenId, long serialNumber, ExpandedAccountId sender, AccountNameEnum accountName) {
-        var receiver = accountClient.getAccount(accountName).getAccountId();
-        long startingBalance = getTokenBalance(receiver, tokenId);
-        networkTransactionResponse = tokenClient.transferNonFungibleToken(
-                tokenId, sender, receiver, List.of(serialNumber), null, null, false);
+            TokenId tokenId,
+            List<Long> serialNumbers,
+            ExpandedAccountId senderAccountId,
+            AccountId recipientAccountId,
+            boolean isApproval) {
+        var ownerAccountId = accountClient.getClient().getOperatorAccountId();
+        long startingBalance = getTokenBalance(recipientAccountId, tokenId);
 
-        assertNotNull(networkTransactionResponse.getTransactionId());
-        assertNotNull(networkTransactionResponse.getReceipt());
-        assertThat(getTokenBalance(receiver, tokenId)).isEqualTo(startingBalance + 1);
+        networkTransactionResponse = tokenClient.transferNonFungibleToken(
+                tokenId,
+                senderAccountId,
+                recipientAccountId,
+                serialNumbers,
+                senderAccountId.getPrivateKey(),
+                ownerAccountId,
+                isApproval);
+
+        assertThat(networkTransactionResponse.getTransactionId()).isNotNull();
+        assertThat(networkTransactionResponse.getReceipt()).isNotNull();
+        assertThat(getTokenBalance(recipientAccountId, tokenId)).isEqualTo(startingBalance + serialNumbers.size());
     }
 
     private TransactionDetail verifyTransactions() {
@@ -705,7 +761,7 @@ public class TokenFeature extends AbstractFeature {
         List<TransactionDetail> transactions = mirrorTransactionsResponse.getTransactions();
         assertNotNull(transactions);
         assertThat(transactions).isNotEmpty();
-        TransactionDetail mirrorTransaction = transactions.get(0);
+        TransactionDetail mirrorTransaction = transactions.getFirst();
         assertThat(mirrorTransaction.getTransactionId()).isEqualTo(transactionId);
         assertThat(mirrorTransaction.getValidStartTimestamp())
                 .isEqualTo(networkTransactionResponse.getValidStartString());
@@ -726,7 +782,7 @@ public class TokenFeature extends AbstractFeature {
         List<NftTransactionTransfer> transactions = mirrorTransactionsResponse.getTransactions();
         assertNotNull(transactions);
         assertThat(transactions).isNotEmpty();
-        NftTransactionTransfer mirrorTransaction = transactions.get(0);
+        NftTransactionTransfer mirrorTransaction = transactions.getFirst();
         assertThat(mirrorTransaction.getTransactionId()).isEqualTo(transactionId);
 
         return mirrorTransaction;
@@ -741,13 +797,13 @@ public class TokenFeature extends AbstractFeature {
         return mirrorToken;
     }
 
-    private Nft verifyNft(TokenId tokenId, Long serialNumber) {
+    private Nft verifyNft(TokenId tokenId, Long serialNumber, byte[] metadata) {
         Nft mirrorNft = mirrorClient.getNftInfo(tokenId.toString(), serialNumber);
 
         assertNotNull(mirrorNft);
         assertThat(mirrorNft.getTokenId()).isEqualTo(tokenId.toString());
         assertThat(mirrorNft.getSerialNumber()).isEqualTo(serialNumber);
-
+        assertThat(mirrorNft.getMetadata()).isEqualTo(metadata);
         return mirrorNft;
     }
 
@@ -758,7 +814,7 @@ public class TokenFeature extends AbstractFeature {
         List<TransactionDetail> transactions = mirrorTransactionsResponse.getTransactions();
         assertNotNull(transactions);
         assertThat(transactions).isNotEmpty();
-        TransactionDetail mirrorTransaction = transactions.get(0);
+        TransactionDetail mirrorTransaction = transactions.getFirst();
         assertThat(mirrorTransaction.getTransactionId()).isEqualTo(transactionId);
         assertThat(mirrorTransaction.getValidStartTimestamp())
                 .isEqualTo(networkTransactionResponse.getValidStartString());
@@ -784,7 +840,7 @@ public class TokenFeature extends AbstractFeature {
         List<TransactionDetail> transactions = mirrorTransactionsResponse.getTransactions();
         assertNotNull(transactions);
         assertThat(transactions).isNotEmpty();
-        TransactionDetail mirrorTransaction = transactions.get(0);
+        TransactionDetail mirrorTransaction = transactions.getFirst();
         assertThat(mirrorTransaction.getTransactionId()).isEqualTo(transactionId);
         assertThat(mirrorTransaction.getValidStartTimestamp())
                 .isEqualTo(networkTransactionResponse.getValidStartString());
@@ -943,4 +999,36 @@ public class TokenFeature extends AbstractFeature {
         assertNotEquals(0, mirrorTokenRelationship.getTokens().size());
         assertThat(mirrorTokenRelationship.getLinks().getNext()).isNull();
     }
+
+    private void updateNftMetadataForSerials(int... serialNumberIndices) {
+        var newMetadata = nextBytes(4);
+        var nftInfoForToken = tokenNftInfoMap.get(tokenId);
+        var serialNumbers = Arrays.stream(serialNumberIndices)
+                .mapToObj(nftInfoForToken::get)
+                .map(NftInfo::serialNumber)
+                .toList();
+        networkTransactionResponse =
+                tokenClient.updateNftMetadata(tokenId, serialNumbers, tokenResponse.metadataKey(), newMetadata);
+
+        assertNotNull(networkTransactionResponse.getTransactionId());
+        TransactionReceipt receipt = networkTransactionResponse.getReceipt();
+        assertNotNull(receipt);
+
+        Arrays.stream(serialNumberIndices)
+                .forEach(idx -> nftInfoForToken.set(
+                        idx,
+                        nftInfoForToken.get(idx).toBuilder()
+                                .metadata(newMetadata)
+                                .build()));
+    }
+
+    private List<Long> getSerialsForToken(TokenId tokenId) {
+        var nftInfoForToken = tokenNftInfoMap.get(tokenId);
+        return nftInfoForToken == null
+                ? emptyList()
+                : nftInfoForToken.stream().map(NftInfo::serialNumber).toList();
+    }
+
+    @Builder(toBuilder = true)
+    private record NftInfo(Long serialNumber, byte[] metadata) {}
 }
